# maas

./: Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml  env.json  get_openapi_json.sh  package-lock.json  package.json
.github/workflows/: check.yml  ci.yml
openapi/: maas.md  openapi.json
src/: main.rs
