[package]
name = "maas"
version = "1.0.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
rocket_okapi = { git = "https://github.com/ThouCheese/okapi", branch = "feat/rocket0.5-rc.2", features = ["rapidoc", "swagger"] }
okapi = "0.7.0-rc.1"
schemars = "0.8.8"
uuid = { version = "1.0.0", features = ["v4"] }
lazy_static = "1.4.0"
